kubernetes/samples/charts/traefik/samples/consoletls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-tls
  namespace: sample-domain1-ns
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/redirect-regex: ^http://192\\.168\\.99\\.105:30443/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://192.168.99.105:30443/$1
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: domain1.org 
    http:
      paths:
      - path: /console
        backend:
          serviceName: 'domain1-admin-server'
          servicePort: 7001
  tls:
  - hosts:
    - domain1.org
    secretName: domain1-tls-cert
