kubernetes/samples/charts/traefik/samples/ingress-route.yaml
# Copyright (c) 2020, Oracle Corporation and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`domain1.org`)
    kind: Rule
    services:
    - name: domain1-cluster-cluster-1
      port: 8001
  tls:
    secretName: domain1-tls-cert
