kubernetes/samples/charts/traefik/samples/tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-tls
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: domain1.org 
    http:
      paths:
      - path:
        backend:
          serviceName: 'domain1-cluster-cluster-1'
          servicePort: 8001
  tls:
   - secretName: domain1-tls-cert
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-tls-2
  namespace: test1
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: domain2.org
    http:
     paths:
      - path:
        backend:
          serviceName: 'domain1-cluster-cluster-1'
          servicePort: 8001
  tls:
   - secretName: domain2-tls-cert
